--- a/FitnessTracker.V1/Pages/Login_logout_registerPage/Login.razor
+++ b/FitnessTracker.V1/Pages/Login_logout_registerPage/Login.razor
@@ -53,7 +53,7 @@
             // 🔵 Sauvegarde locale pour la prochaine session
             await SupabaseService.SaveSessionAsync(); 
             Console.WriteLine("✅ Enregistrement session réussie");
-            Nav.NavigateTo("/view-session");
+            Nav.NavigateTo("/view-prog");
         }
         else
         {
