--- a/FitnessTracker.V1/Pages/ProgrammeStarPage/ProgrammesStar.razor
+++ b/FitnessTracker.V1/Pages/ProgrammeStarPage/ProgrammesStar.razor
@@ -1,4 +1,4 @@
-﻿@page "/programmes-predefinis"
+﻿@page "/programmes-star"
 @inject NavigationManager Nav
 
 <h3 class="session-header">Programmes prédéfinis</h3>
