--- a/FitnessTracker.V1/Pages/ProgrammePage/ViewSession.razor
+++ b/FitnessTracker.V1/Pages/ProgrammePage/ViewSession.razor
@@ -9,7 +9,7 @@
 @using FitnessTracker.V1.Mapping
 
 @* @using Progress = FitnessTracker.V1.Components.ProgressBar *@
-@using static FitnessTracker.V1.Components.SessionProgressBar
+@using static FitnessTracker.V1.Components.Graphique.SessionProgressBar
 @inject SupabaseService2 SupabaseService
 @inject PoidsService PoidsService
 @inject IJSRuntime JS
@@ -128,6 +128,7 @@
                 }
             </select>
         </div>
+
     }
 </div>
 
