--- a/FitnessTracker.V1/wwwroot/css/mobile-native.css
+++ b/FitnessTracker.V1/wwwroot/css/mobile-native.css
@@ -183,3 +183,18 @@ aside.overflow-auto {
         width: 90vw;
     }
 }
+
+.completed-option {
+    background-color: #bff5cc !important;
+    font-weight: 700;
+    color: #155724;
+}
+.clickable-card {
+    cursor: pointer;
+    transition: transform 0.1s;
+}
+
+    .clickable-card:hover {
+        transform: scale(1.02);
+    }
+
