--- a/FitnessTracker.V1/wwwroot/css/components.css
+++ b/FitnessTracker.V1/wwwroot/css/components.css
@@ -1,11 +1,11 @@
 ﻿.progress-container {
-    background-color: #ffffff44;
+    background-color: #1b6ec2;
     border-radius: 20px;
     padding: 0.75rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: white;
+    color: cornflowerblue;
     font-weight: 700;
     margin-bottom: 2rem;
     font-size: 1.1rem;
