--- a/FitnessTracker.V1/Pages/AuthentificationPage/Login.razor
+++ b/FitnessTracker.V1/Pages/AuthentificationPage/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/login"
+@using FitnessTracker.V1.Services.Data
 
 @inject AuthService AuthService
 @inject SupabaseService2 SupabaseService
@@ -53,7 +54,7 @@
             // 🔵 Sauvegarde locale pour la prochaine session
             await SupabaseService.SaveSessionAsync(); 
             Console.WriteLine("✅ Enregistrement session réussie");
-            Nav.NavigateTo("/view-prog");
+            Nav.NavigateTo("/view-prog", forceLoad:true);
         }
         else
         {
