--- a/FitnessTracker.V1/Pages/AuthentificationPage/Logout.razor
+++ b/FitnessTracker.V1/Pages/AuthentificationPage/Logout.razor
@@ -1,4 +1,5 @@
 ﻿@page "/logout"
+@using FitnessTracker.V1.Services.Data
 
 @inject AuthService AuthService
 @inject SupabaseService2 SupabaseService
