--- a/FitnessTracker.V1/Pages/CoachingPage/Programme.razor
+++ b/FitnessTracker.V1/Pages/CoachingPage/Programme.razor
@@ -1,6 +1,7 @@
 ﻿@page "/programme"
 @inject SupabaseService2 SupabaseService
 @using FitnessTracker.V1.Models
+@using FitnessTracker.V1.Services.Data
 
 <h3>Créer un programme de musculation</h3>
 
