--- a/FitnessTracker.V1/Pages/ProgrammePredefiniPage/ProgrammePredefiniPreview.razor
+++ b/FitnessTracker.V1/Pages/ProgrammePredefiniPage/ProgrammePredefiniPreview.razor
@@ -1,5 +1,6 @@
 ﻿@page "/programme-predefini-preview/{Nom}"
 @using FitnessTracker.V1.Models
+@using FitnessTracker.V1.Services.Data
 @using FitnessTracker.V1.Services.ProgrammeGeneration.ProgrammeSpecial
 @inject NavigationManager Nav
 @inject SupabaseService2 SupabaseService
