--- a/FitnessTracker.V1/Pages/ProgrammeStarPage/ProgrammeStarEnCours.razor
+++ b/FitnessTracker.V1/Pages/ProgrammeStarPage/ProgrammeStarEnCours.razor
@@ -1,5 +1,6 @@
 ﻿@page "/programme-en-cours"
 @using FitnessTracker.V1.Models
+@using FitnessTracker.V1.Services.Data
 @inject NavigationManager Nav
 @inject SupabaseService2 SupabaseService
 @inject Supabase.Client Supabase
