--- a/FitnessTracker.V1/Components/Graphique/PrTracker.razor
+++ b/FitnessTracker.V1/Components/Graphique/PrTracker.razor
@@ -3,15 +3,10 @@
 @using BlazorBootstrap
 @using FitnessTracker.V1.Models
 
-<div class="container-fluid overflow-x-auto">
-    <div class="duo-card mb-3 p-3">
-        <p class="duo-objectif">
-            🏆 Ce graphique affiche vos meilleurs records sur les 10 exercices où vous avez levé le plus lourd.
-            
-        </p>
-    </div>
-    <BarChart @ref="chart" Width="@Width" Height="@Height" />
+<div class="chart-wrapper">
+    <BarChart @ref="chart" class="chart-fullsize" />
 </div>
+
 
 @code {
     [Parameter] public List<PoidsEntry> Entries { get; set; } = new();
