--- a/FitnessTracker.V1/Pages/CoachingPage/GestionPoids.razor
+++ b/FitnessTracker.V1/Pages/CoachingPage/GestionPoids.razor
@@ -1,6 +1,7 @@
 ﻿@page "/gestion_poids"
 @using FitnessTracker.V1.Models
 @using FitnessTracker.V1.Services
+@using FitnessTracker.V1.Services.Data
 @inject PoidsService PoidsService
 @inject SupabaseService2 SupabaseService
 
