--- a/FitnessTracker.V1/Pages/PrincipalPage/Analyse.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/Analyse.razor
@@ -1,4 +1,4 @@
-﻿@page "/analyse"
+﻿@page "/analyse2"
 @using FitnessTracker.V1.Models
 @using FitnessTracker.V1.Services
 @using FitnessTracker.V1.Components
