--- a/FitnessTracker.V1/Pages/PrincipalPage/CreateProgramme.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/CreateProgramme.razor
@@ -3,10 +3,11 @@
 @inject ILocalStorageService LocalStorage
 @inject SupabaseService2 SupabaseService
 @inject NavigationManager Nav
-@using static FitnessTracker.V1.Models.Model
 @using System.Text.Json
 @using Blazored.LocalStorage
 @using FitnessTracker.V1.Models.Enumeration
+@using FitnessTracker.V1.Services.Data
+@using static FitnessTracker.V1.Models.Model
 
 <style>
     .input-label {
