--- a/FitnessTracker.V1/Pages/ProgrammePage/GenerateProgramme.razor
+++ b/FitnessTracker.V1/Pages/ProgrammePage/GenerateProgramme.razor
@@ -2,6 +2,7 @@
 @using Blazored.LocalStorage
 @using FitnessTracker.V1.Models
 @using FitnessTracker.V1.Models.Enumeration
+@using FitnessTracker.V1.Services.Data
 @using FitnessTracker.V1.Services.ProgrammeGeneration.ProgrammeClassic
 @inject ProgrammeGeneratorService Generator
 @inject HttpClient Http
